# hydra-utils

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
src/hydra_utils/: __init__.py  dummy.py  utils.py  version.py
tests/: test_utils.py  test_version.py
